--- a/live.html
+++ b/live.html
@@ -3,16 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Stream | HoopyStreams</title>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8J3FSRNC5H"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-8J3FSRNC5H');
-    </script>
+    <title>Live Stream | RushyStreams</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -21,15 +12,15 @@
     <nav class="bg-neutral-900 fixed w-full z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
-                <a href="https://hoopystreams.com" class="text-2xl font-bold text-white">HoopyStreams</a>
+                <a href="https://rushystreams.com" class="text-2xl font-bold text-white">RushyStreams</a>
                 <div class="hidden md:block flex-grow">
                     <div class="flex items-baseline justify-center space-x-6">
                         <a href="https://hoopystreams.com" class="hover:text-red-600 px-3 py-2 text-sm font-medium">NBA</a>
                         <a href="https://hoopystreams.com" class="hover:text-red-600 px-3 py-2 text-sm font-medium">NCAA</a>
                         <a href="https://rushystreams.com" class="hover:text-red-600 px-3 py-2 text-sm font-medium">NFL</a>
                         <a href="https://rushystreams.com" class="hover:text-red-600 px-3 py-2 text-sm font-medium">CFB</a>
-                        <a href="https://battystreams.com" class="hover:text-red-600 px-3 py-2 text-sm font-medium">MLB</a>
-                        <a href="https://footystreams.com" class="hover:text-red-600 px-3 py-2 text-sm font-medium">SOCCER</a>
+                        <a href="https://pitchystreams.com" class="hover:text-red-600 px-3 py-2 text-sm font-medium">MLB</a>
+                        <a href="https://footystreams.xyz" class="hover:text-red-600 px-3 py-2 text-sm font-medium">SOCCER</a>
                         <a href="https://trackystreams.com" class="hover:text-red-600 px-3 py-2 text-sm font-medium">F1</a>
                         <a href="https://fightystreams.com" class="hover:text-red-600 px-3 py-2 text-sm font-medium">UFC</a>
                         <a href="/blog" class="hover:text-red-600 px-3 py-2 text-sm font-medium">BLOG</a>
